--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 layout: minimal
 title: Marine Invertebrate Microbiome Project
+nav_order: 4
+has_children: true
